[gd_scene load_steps=10 format=3 uid="uid://cxkrb8f74vomc"]

[ext_resource type="Texture2D" uid="uid://cpopoeaaoij2a" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="1_uo6jg"]
[ext_resource type="Texture2D" uid="uid://bu6fcue54t33o" path="res://assets/hdris/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_riqg6"]
[ext_resource type="Script" path="res://player.gd" id="3_w51sw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tvyl4"]
albedo_texture = ExtResource("1_uo6jg")
uv1_triplanar = true

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_aveop"]
panorama = ExtResource("2_riqg6")

[sub_resource type="Sky" id="Sky_g0c6y"]
sky_material = SubResource("PanoramaSkyMaterial_aveop")

[sub_resource type="Environment" id="Environment_kg06i"]
background_mode = 2
sky = SubResource("Sky_g0c6y")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e3hnj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g0upv"]
height = 1.20005

[node name="world" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.5291, -8.91425, 4.88949)

[node name="stage" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="stage"]
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="Slanted Wall" type="CSGBox3D" parent="stage"]
transform = Transform3D(0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0, 0, 1, 18.8792, -4.21791, 0)
use_collision = true
size = Vector3(20, 1, 19.9443)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="Slanted Wall2" type="CSGBox3D" parent="stage"]
transform = Transform3D(0.906308, -0.422618, 0, 0.422618, 0.906308, 0, 0, 0, 1, 48.9432, -4.08775, 0)
use_collision = true
size = Vector3(20, 1, 19.9443)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="Obstacle" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 7.75082)
use_collision = true
size = Vector3(20, 1, 2.53564)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.9433, -8.26, 0)
use_collision = true
size = Vector3(17.0955, 1, 20)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 67.7633, 0.0628138, 0)
use_collision = true
size = Vector3(20.1931, 1, 20)
material = SubResource("StandardMaterial3D_tvyl4")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_kg06i")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="."]
floor_stop_on_slope = false
floor_max_angle = 1.45211
script = ExtResource("3_w51sw")

[node name="standing_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52424, 0)
shape = SubResource("CapsuleShape3D_e3hnj")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11437, 0)
shape = SubResource("CapsuleShape3D_g0upv")
disabled = true

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="player/head"]

[node name="head_collision_cast" type="RayCast3D" parent="player"]
target_position = Vector3(0, 3, 0)

[node name="ground_collision_cast" type="RayCast3D" parent="player"]
target_position = Vector3(0, -2, 0)
